--- a/Sources/LigaStavok.UdfsNext.Line.Service/appsettings.json
+++ b/Sources/LigaStavok.UdfsNext.Line.Service/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Cluster": {
     "ClusterId": "msk",
-    "ServiceId": "line",
+    "ServiceId": "ligastavok_next_line",
     "Endpoint": {
       "SiloPort": "11111",
       "GatewayPort": "30000"
@@ -27,6 +27,32 @@
       "Provider": "System.Data.SqlClient"
     }
   },
+  "Providers": [
+    {
+      "Name": "Betradar",
+      "Cluster": {
+        "ClusterId": "msk",
+        "ServiceId": "ligastavok_next_provider_betradar",
+        "Membership": {
+          "Enabled": true,
+          "ConnectionString": "Persist Security Info=False;Server=DBMSSQL-01.dev.oscaryard.local;Database=UdfsCluster;Trusted_Connection=True;",
+          "Provider": "System.Data.SqlClient"
+        }
+      }
+    },
+    {
+      "Name": "Betgenius",
+      "Cluster": {
+        "ClusterId": "msk",
+        "ServiceId": "ligastavok_next_provider_betgenius",
+        "Membership": {
+          "Enabled": true,
+          "ConnectionString": "Persist Security Info=False;Server=DBMSSQL-01.dev.oscaryard.local;Database=UdfsCluster;Trusted_Connection=True;",
+          "Provider": "System.Data.SqlClient"
+        }
+      }
+    }
+  ],
   "Logging": {
     "LogLevel": {
       "Default": "Information",
