--- a/Sources/LigaStavok.UdfsNext.Line.Clustering/LigaStavok.UdfsNext.Line.Clustering.csproj
+++ b/Sources/LigaStavok.UdfsNext.Line.Clustering/LigaStavok.UdfsNext.Line.Clustering.csproj
@@ -10,11 +10,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LigaStavok.UdfsNext.Abstractions\LigaStavok.UdfsNext.Primitives.csproj" />
     <ProjectReference Include="..\LigaStavok.UdfsNext.Configuration\LigaStavok.UdfsNext.Configuration.csproj" />
     <ProjectReference Include="..\LigaStavok.UdfsNext.Inferfaces\LigaStavok.UdfsNext.Line.Interfaces.csproj" />
-    <ProjectReference Include="..\LigaStavok.UdfsNext.Line.Abstractions\LigaStavok.UdfsNext.Line.Primitives.csproj" />
+    <ProjectReference Include="..\LigaStavok.UdfsNext.Line.Primitives\LigaStavok.UdfsNext.Line.Primitives.csproj" />
     <ProjectReference Include="..\LigaStavok.UdfsNext.Line.Runtime\LigaStavok.UdfsNext.Line.Runtime.csproj" />
+    <ProjectReference Include="..\LigaStavok.UdfsNext.Primitives\LigaStavok.UdfsNext.Primitives.csproj" />
   </ItemGroup>
 
 </Project>
