--- a/Sources/LigaStavok.UdfsNext.Line.Primitives/LigaStavok.UdfsNext.Line.Primitives.csproj
+++ b/Sources/LigaStavok.UdfsNext.Line.Primitives/LigaStavok.UdfsNext.Line.Primitives.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LigaStavok.UdfsNext.Abstractions\LigaStavok.UdfsNext.Primitives.csproj" />
+    <ProjectReference Include="..\LigaStavok.UdfsNext.Primitives\LigaStavok.UdfsNext.Primitives.csproj" />
   </ItemGroup>
 
 </Project>
