--- a/Sources/LigaStavok.UdfsNext.Line.Providers.BetRadar/LigaStavok.UdfsNext.Provider.BetRadar.csproj
+++ b/Sources/LigaStavok.UdfsNext.Line.Providers.BetRadar/LigaStavok.UdfsNext.Provider.BetRadar.csproj
@@ -12,7 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\LigaStavok.UdfsNext.Clustering\LigaStavok.UdfsNext.Orleans.csproj" />
-    <ProjectReference Include="..\LigaStavok.UdfsNext.Configuration\LigaStavok.UdfsNext.Configuration.csproj" />
+    <ProjectReference Include="..\LigaStavok.UdfsNext.Configuration\LigaStavok.UdfsNext.Orleans.Configuration.csproj" />
     <ProjectReference Include="..\LigaStavok.UdfsNext.Inferfaces\LigaStavok.UdfsNext.Line.Interfaces.csproj" />
     <ProjectReference Include="..\LigaStavok.UdfsNext.Line.Client\LigaStavok.UdfsNext.Line.Orleans.Client.csproj" />
     <ProjectReference Include="..\LigaStavok.UdfsNext.Line.Primitives\LigaStavok.UdfsNext.Line.Primitives.csproj" />
