--- a/Sources/LigaStavok.UdfsNext.Provider.SportLevel.Orleans/LigaStavok.UdfsNext.Provider.SportLevel.Orleans.csproj
+++ b/Sources/LigaStavok.UdfsNext.Provider.SportLevel.Orleans/LigaStavok.UdfsNext.Provider.SportLevel.Orleans.csproj
@@ -7,11 +7,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.5" />
-    <PackageReference Include="Microsoft.Orleans.Runtime.Abstractions" Version="3.2.0" />
+    <PackageReference Include="Microsoft.Orleans.Runtime.Abstractions" Version="3.2.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\LigaStavok.UdfsNext.Clustering\LigaStavok.UdfsNext.Orleans.csproj" />
+    <ProjectReference Include="..\LigaStavok.UdfsNext.Configuration\LigaStavok.UdfsNext.Orleans.Configuration.csproj" />
     <ProjectReference Include="..\LigaStavok.UdfsNext.Provider.SportLevel.Interfaces\LigaStavok.UdfsNext.Provider.SportLevel.Runtime.Interfaces.csproj" />
     <ProjectReference Include="..\LigaStavok.UdfsNext.Provider.SportLevel.Orleans.Interfaces\LigaStavok.UdfsNext.Provider.SportLevel.Orleans.Interfaces.csproj" />
     <ProjectReference Include="..\LigaStavok.UdfsNext.Provider.SportLevel.Runtime.Primitives\LigaStavok.UdfsNext.Provider.SportLevel.Runtime.Primitives.csproj" />
