--- a/Sources/LigaStavok.UdfsNext.Clustering/LigaStavok.UdfsNext.Orleans.csproj
+++ b/Sources/LigaStavok.UdfsNext.Clustering/LigaStavok.UdfsNext.Orleans.csproj
@@ -9,10 +9,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.5" />
-    <PackageReference Include="Microsoft.Orleans.Orleans.AdoNet" Version="3.2.0" />
-    <PackageReference Include="Microsoft.Orleans.OrleansRuntime" Version="3.2.0" />
-    <PackageReference Include="Microsoft.Orleans.Persistence.AdoNet" Version="3.2.0" />
-    <PackageReference Include="Microsoft.Orleans.Reminders.AdoNet" Version="3.2.0" />
+    <PackageReference Include="Microsoft.Orleans.Client" Version="3.2.1" />
+    <PackageReference Include="Microsoft.Orleans.Clustering.AdoNet" Version="3.2.1" />
+    <PackageReference Include="Microsoft.Orleans.OrleansProviders" Version="3.2.1" />
+    <PackageReference Include="Microsoft.Orleans.OrleansRuntime" Version="3.2.1" />
+    <PackageReference Include="Microsoft.Orleans.Persistence.AdoNet" Version="3.2.1" />
+    <PackageReference Include="Microsoft.Orleans.Reminders.AdoNet" Version="3.2.1" />
     <PackageReference Include="System.Runtime" Version="4.3.1" />
   </ItemGroup>
 
