--- a/Sources/LigaStavok.UdfsNext.Configuration/LigaStavok.UdfsNext.Orleans.Configuration.csproj
+++ b/Sources/LigaStavok.UdfsNext.Configuration/LigaStavok.UdfsNext.Orleans.Configuration.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <Configurations>Debug;Release;BetRadar</Configurations>
+    <RootNamespace>LigaStavok.UdfsNext</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
