--- a/Sources/LigaStavok.UdfsNext.Provider.SportLevel.Runtime/LigaStavok.UdfsNext.Provider.SportLevel.Runtime.csproj
+++ b/Sources/LigaStavok.UdfsNext.Provider.SportLevel.Runtime/LigaStavok.UdfsNext.Provider.SportLevel.Runtime.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="3.1.5" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.5" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.11.1" />
   </ItemGroup>
 
   <ItemGroup>
