--- a/Sources/LigaStavok.UdfsNext.Provider.SportLevel.Console/appsettings.json
+++ b/Sources/LigaStavok.UdfsNext.Provider.SportLevel.Console/appsettings.json
@@ -1,9 +1,9 @@
 {
   "Provider": {
-    "UserName": "",
-    "Password": "",
-    "WebSocketUrl": "",
-    "WebApiUrl": "",
+    "UserName": "firuza.hismatullina@ligastavok.ru",
+    "Password": "Liga2020",
+    "WebSocketUrl": "wss://partner.sportlevel.com/highway",
+    "WebApiUrl": "https://partner.sportlevel.com",
     "MetaRefreshInterval": "00:01:00"
   },
   "Cluster": {
@@ -19,7 +19,7 @@
       //"GatewayListeningPort": 
     },
     "Membership": {
-      "Enabled": true,
+      "Enabled": false,
       "ConnectionString": "Persist Security Info=False;Server=DBMSSQL-01.dev.oscaryard.local;Database=UdfsCluster;Trusted_Connection=True;",
       "Provider": "System.Data.SqlClient"
     },
