--- a/Sources/LigaStavok.UdfsNext.Provider.SportLevel.Orleans.Interfaces/LigaStavok.UdfsNext.Provider.SportLevel.Orleans.Interfaces.csproj
+++ b/Sources/LigaStavok.UdfsNext.Provider.SportLevel.Orleans.Interfaces/LigaStavok.UdfsNext.Provider.SportLevel.Orleans.Interfaces.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Orleans.CodeGenerator.MSBuild" Version="3.2.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.Orleans.Core.Abstractions" Version="3.2.1" />
   </ItemGroup>
 
