--- a/Sources/LigaStavok.UdfsNext.Provider.SportLevel.Orleans/LigaStavok.UdfsNext.Provider.SportLevel.Orleans.csproj
+++ b/Sources/LigaStavok.UdfsNext.Provider.SportLevel.Orleans/LigaStavok.UdfsNext.Provider.SportLevel.Orleans.csproj
@@ -7,7 +7,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.5" />
+    <PackageReference Include="Microsoft.Orleans.CodeGenerator.MSBuild" Version="3.2.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.Orleans.Runtime.Abstractions" Version="3.2.1" />
+    <PackageReference Include="NLog.Extensions.Logging" Version="1.6.4" />
   </ItemGroup>
 
   <ItemGroup>
