--- a/Sources/LigaStavok.UdfsNext.Provider.SportLevel.Console/LigaStavok.UdfsNext.Provider.SportLevel.Console.csproj
+++ b/Sources/LigaStavok.UdfsNext.Provider.SportLevel.Console/LigaStavok.UdfsNext.Provider.SportLevel.Console.csproj
@@ -3,8 +3,11 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-  </PropertyGroup>
 
+		<ServerGarbageCollection>true</ServerGarbageCollection>
+		<ConcurrentGarbageCollection>true</ConcurrentGarbageCollection>
+	</PropertyGroup>
+	
   <ItemGroup>
     <None Remove="appsettings.Development.json" />
     <None Remove="appsettings.json" />
@@ -28,6 +31,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\LigaStavok.UdfsNext.Provider.SportLevel.Orleans\LigaStavok.UdfsNext.Provider.SportLevel.Orleans.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="nlog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
