--- a/Sources/LigaStavok.UdfsNext.Primitives/LigaStavok.UdfsNext.Primitives.csproj
+++ b/Sources/LigaStavok.UdfsNext.Primitives/LigaStavok.UdfsNext.Primitives.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>LigaStavok.UdfsNext</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Dumps\" />
+  </ItemGroup>
+
 </Project>
