--- a/Sources/LigaStavok.UdfsNext.Provider.SportLevel.Console/nlog.config
+++ b/Sources/LigaStavok.UdfsNext.Provider.SportLevel.Console/nlog.config
@@ -4,14 +4,16 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
       internalLogLevel="Warn"
-      internalLogFile="c:\LineEmulator\internal-nlog.txt">
+      internalLogFile="c:\UdfsNext\SportLevel\internal-nlog.txt">
 
+	<variable name="project" value="UfdsNext.Provider.SportLevel" />
 	<variable name="logsdir" value="c:\UdfsNext\SportLevel" />
+	<variable name="address" value="udp://localhost:9500" />
 
 	<targets async="true">
 
 		<target name="jsonFile" xsi:type="File" encoding="utf-8"
-            fileName="${var:logsdir}/${level}.log"
+            fileName="${var:logsdir}/${date:format=yyyy-MM-dd}.${level}.log"
             archiveFileName="${var:logsdir}/{#}.log"
             archiveNumbering="Date"
             archiveDateFormat="yyyy-MM-dd_HH"
@@ -21,7 +23,7 @@
             cleanupFileName="false">
 
 			<layout xsi:type="JsonLayout"  maxRecursionLimit="2" includeAllProperties="true" >
-				<attribute name="project" layout="SportLevelNext" />
+				<attribute name="project" layout="${var:project}" />
 				<attribute name="machinename" layout="${machinename}" />
 				<attribute name="timestamp" layout="${date:universalTime=true:format=O}" />
 				<attribute name="level" layout="${level:upperCase=true}" />
@@ -30,9 +32,25 @@
 				<attribute name="exception" layout="${exception:format=toString}" escapeUnicode="false" />
 			</layout>
 		</target>
+
+		<target name="networkLog" xsi:type="Network" encoding="utf-8"
+            address="${var:address}"
+            newLine="true">
+			<layout xsi:type="JsonLayout"  maxRecursionLimit="2" includeAllProperties="true" >
+				<attribute name="project" layout="${var:project}" />
+				<attribute name="machinename" layout="${machinename}" />
+				<attribute name="timestamp" layout="${date:universalTime=true:format=O}" />
+				<attribute name="level" layout="${level:upperCase=true}" />
+				<attribute name="logger" layout="${logger:shortName=true}" />
+				<attribute name="message" layout="${message}" escapeUnicode="false" />
+				<attribute name="exception" layout="${exception:format=toString}" escapeUnicode="false" />
+			</layout>
+		</target>
+		
 	</targets>
 
 	<rules>
+		<logger name="*" minlevel="Trace" writeTo="networkLog"  />
 		<logger name="*" minlevel="Trace" writeTo="jsonFile" />
 	</rules>
 
