--- a/Sources/LigaStavok.UdfsNext.Provider.SportLevel.Console/appsettings.json
+++ b/Sources/LigaStavok.UdfsNext.Provider.SportLevel.Console/appsettings.json
@@ -444,6 +444,10 @@
       }
     ]
   },
+  "Dump": {
+    "MaxDegreeOfParallelism": 100,
+    "RootDirectory": "C:\\UdfsNext\\SportLevel\\dumps"
+  },
   "transmitter": {
     "endpoint": {
       "enabled": false,
