--- a/Sources/LigaStavok.UdfsNext.Provider.SportLevel.Runtime/LigaStavok.UdfsNext.Provider.SportLevel.Runtime.csproj
+++ b/Sources/LigaStavok.UdfsNext.Provider.SportLevel.Runtime/LigaStavok.UdfsNext.Provider.SportLevel.Runtime.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\LigaStavok.Threading\LigaStavok.Threading.csproj" />
+    <ProjectReference Include="..\LigaStavok.UdfsNext.Dumps\LigaStavok.UdfsNext.Dumps.csproj" />
     <ProjectReference Include="..\LigaStavok.UdfsNext.Primitives\LigaStavok.UdfsNext.Primitives.csproj" />
     <ProjectReference Include="..\LigaStavok.UdfsNext.Provider.SportLevel.Runtime.Interfaces\LigaStavok.UdfsNext.Provider.SportLevel.Runtime.Interfaces.csproj" />
     <ProjectReference Include="..\LigaStavok.WebSocket\LigaStavok.Websocket.csproj" />
