--- a/Sources/LigaStavok.UdfsNext.Dumps/LigaStavok.UdfsNext.Dumps.csproj
+++ b/Sources/LigaStavok.UdfsNext.Dumps/LigaStavok.UdfsNext.Dumps.csproj
@@ -5,4 +5,14 @@
     <RootNamespace>LigaStavok.UdfsNext.Dumps</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.6" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.6" />
+    <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.11.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LigaStavok.UdfsNext.Primitives\LigaStavok.UdfsNext.Primitives.csproj" />
+  </ItemGroup>
+
 </Project>
