--- a/Sources/LigaStavok.UdfsNext.Provider.SportLevel.Console/appsettings.json
+++ b/Sources/LigaStavok.UdfsNext.Provider.SportLevel.Console/appsettings.json
@@ -10,22 +10,23 @@
     "ClusterId": "msk",
     "ServiceId": "udfs_provider_sportlevel",
     "Endpoint": {
-      "SiloPort": "11111",
-      "GatewayPort": "30000"
-      //"AdvertisedIPAddress": "",
-      //"SiloListeningIP": "",
-      //"SiloListeningPort": 0,
-      //"GatewayListeningIP": "",
-      //"GatewayListeningPort": 
+      "SiloPort": "25001",
+      "GatewayPort": "25002",
+
+      "AdvertisedIPAddress": "0.0.0.0",
+      "SiloListeningIP": "0.0.0.0",
+      "SiloListeningPort": 25003,
+      "GatewayListeningIP": "0.0.0.0",
+      "GatewayListeningPort": 25004
     },
     "Membership": {
-      "Enabled": false,
-      "ConnectionString": "Persist Security Info=False;Server=DBMSSQL-01.dev.oscaryard.local;Database=UdfsCluster;Trusted_Connection=True;",
+      "Enabled": true,
+      "ConnectionString": "Data Source=dbmssql-02.app-ses.com;Initial Catalog=DEV_UdfsNext_ClusterMembership;User ID=udfsnext_provider_service_login;Password=udfsnext_provider_service_login;Application Name=UdfsNext_Provider_SportLevel",
       "Provider": "System.Data.SqlClient"
     },
     "Storage": {
-      "Enabled": false,
-      "ConnectionString": "",
+      "Enabled": true,
+      "ConnectionString": "Data Source=dbmssql-02.app-ses.com;Initial Catalog=DEV_UdfsNext_PersistentStorage;User ID=udfsnext_provider_service_login;Password=udfsnext_provider_service_login;Application Name=UdfsNext_Provider_SportLevel",
       "Provider": "System.Data.SqlClient"
     },
     "Reminder": {
@@ -445,8 +446,19 @@
     ]
   },
   "Dump": {
-    "MaxDegreeOfParallelism": 100,
-    "RootDirectory": "C:\\UdfsNext\\SportLevel\\dumps"
+    "FileSystem": {
+      "Enabled": true,
+      "MaxDegreeOfParallelism": 100,
+      "RootDirectory": "C:\\UdfsNext\\SportLevel\\dumps"
+    },
+    "SqlServer": {
+      "Enabled": true,
+      "MaxDegreeOfParallelism": 100,
+      "ConnectionString": "Data Source=dbmssql-02.app-ses.com;Initial Catalog=DEV_UdfsNext_MessageDumps;User ID=udfsnext_provider_service_login;Password=udfsnext_provider_service_login;Application Name=UdfsNext_Provider_SportLevel",
+      "BatchSize": 50,
+      "ServiceId": "UdfsNext_Provider_SportLevel",
+      "TableName": "Dumps"
+    }
   },
   "transmitter": {
     "endpoint": {
