--- a/Sources/LigaStavok.UdfsNext.Dumps/LigaStavok.UdfsNext.Dumps.csproj
+++ b/Sources/LigaStavok.UdfsNext.Dumps/LigaStavok.UdfsNext.Dumps.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.6" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.6" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
     <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.11.1" />
   </ItemGroup>
 
