--- a/Sources/LigaStavok.UdfsNext.Provider.SportLevel.Host/LigaStavok.UdfsNext.Provider.SportLevel.Host.csproj
+++ b/Sources/LigaStavok.UdfsNext.Provider.SportLevel.Host/LigaStavok.UdfsNext.Provider.SportLevel.Host.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <RootNamespace>LigaStavok.UdfsNext.Provider.SportLevel</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
