--- a/Sources/LigaStavok.UdfsNext.Provider.BetRadar.RunTime/LigaStavok.UdfsNext.Provider.BetRadar.RunTime.csproj
+++ b/Sources/LigaStavok.UdfsNext.Provider.BetRadar.RunTime/LigaStavok.UdfsNext.Provider.BetRadar.RunTime.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.5" />
+    <PackageReference Include="Sportradar.OddsFeed.SDKCore" Version="1.8.0" />
   </ItemGroup>
 
 </Project>
