--- a/Sources/LigaStavok.UdfsNext.Provider.SportLevel.Host.WindowsService/LigaStavok.UdfsNext.Provider.SportLevel.Host.WindowsService.csproj
+++ b/Sources/LigaStavok.UdfsNext.Provider.SportLevel.Host.WindowsService/LigaStavok.UdfsNext.Provider.SportLevel.Host.WindowsService.csproj
@@ -6,6 +6,7 @@
 
 		<ServerGarbageCollection>true</ServerGarbageCollection>
 		<ConcurrentGarbageCollection>true</ConcurrentGarbageCollection>
+		<AssemblyName>LigaStavok.UdfsNext.Provider.SportLevel.Host.WindowsService</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
