--- a/Sources/LigaStavok.UdfsNext.Provider.SportLevel.Host/appsettings.json
+++ b/Sources/LigaStavok.UdfsNext.Provider.SportLevel.Host/appsettings.json
@@ -4,7 +4,8 @@
     "Password": "Liga2020",
     "WebSocketUrl": "wss://partner.sportlevel.com/highway",
     "WebApiUrl": "https://partner.sportlevel.com",
-    "MetaRefreshInterval": "00:01:00"
+    "MetaRefreshInterval": "00:01:00",
+    "Margin": 0.07
   },
   "Cluster": {
     "ClusterId": "msk",
