--- a/Sources/LigaStavok.UdfsNext.Dumps.Configuration/LigaStavok.UdfsNext.Dumps.Configuration.csproj
+++ b/Sources/LigaStavok.UdfsNext.Dumps.Configuration/LigaStavok.UdfsNext.Dumps.Configuration.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <RootNamespace>LigaStavok.UdfsNext.Dumps</RootNamespace>
+    <RootNamespace>LigaStavok.UdfsNext</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
